syntax = "proto3";

package blog;
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
option go_package = "github.com/dhanushcrueiso/blog/protos";

message Post {
  string post_id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  google.protobuf.Timestamp publication_date = 5;
  repeated string tags = 6;
}

service PostService {
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
  rpc GetPost (GetPostRequest) returns (GetPostResponse);
  rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse);
  rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
  rpc GetAllPosts (google.protobuf.Empty) returns (GetAllPostResponse);
}
//Protos/blog.proto
message CreatePostRequest {
  Post post = 1;
}

message CreatePostResponse {
  Post post = 1;
}
message GetPostRequest {
  string post_id = 1;
}
message GetPostResponse {
  Post post = 1;
}
message UpdatePostRequest {
  string post_id = 1;
  Post new_post_details = 2;
}

message UpdatePostResponse {
  Post updated_post_details = 1;
}

message DeletePostRequest {
  string post_id = 1;
}

message DeletePostResponse {
  bool success = 1;
}
message GetAllPostResponse {
 repeated Post posts =1;
}